styles.css
/* Globals */

* {
	box-sizing: border-box;
}

html {
	font-size: 1rem;
	font-family: Arial, Helvetica, sans-serif;
}

body {
	max-width: 960px;
	margin-inline: auto;
}

p {
	line-height: 1.5;
	max-width: 60ch;
}

li {
	line-height: 1.5;
	max-width: 60ch;
}

label {
	line-height: 1.5;
}

button {
    background-color: lightgrey;
    border: 2px solid black;
    padding: .5em 1em;
    font-weight: 600;
	transition: all 50ms linear;
}

button.warning {
	color: red;
	background-color: white;
	border: 2px solid red;
}

button.warning:focus,
button.warning:hover,
button.warnng:active {
	background-color: red;
	color: white;
}

button:focus,
button:hover,
button:active {
	background-color: white;
}

#tabs {
	display: flex;
	flex-flow: row;
	flex-wrap: wrap;
	width: 100%;
	max-width: 800px;
	margin-block-start: 2rem;
}

.tab {
	flex: 1;
	background-color: lightgrey;
	border: 2px solid black;
	padding: .3em .5em;
	cursor: pointer;
	margin-block: 0;
	transition: all 50ms linear;
}
.tab:hover {
	background-color: white;
}

.tab.active {
	background-color: white;
	border-bottom: 0;
}

#locations {
	padding: 5px;
	overflow: auto;
	height: 100%;
}

.location {
	display: none;
}

.location.active {
	display: block;
}

.kingdom {
	width: 100%;
	margin-bottom: 5px;
}

.kingdom+.kingdom {
	border-top: 2px solid black;
}

.played {
	text-decoration: line-through;
	background-color: lightgray;
}

.kingdomName {
	font-size: 1.5em;
	font-weight: bold;
}

.error {
	font-size: 1.5em;
	font-weight: bold;
	color: red;
}

